--- a/avia/package.json
+++ b/avia/package.json
@@ -14,6 +14,7 @@
     "git": "^0.1.5",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
+    "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.4.3",
     "react-router-dom": "^6.4.3",
@@ -48,6 +49,8 @@
     ]
   },
   "devDependencies": {
+    "@natscale/react-calendar": "^0.0.0-beta.26",
+    "@types/react-calendar": "^3.9.0",
     "gh-pages": "^4.0.0"
   }
 }
